Update to jline2.